<resources>
    <string name="app_name">NewsApp</string>
    <string name="LogIn">LogIn</string>
    <string name="login">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="do_you_have_an_account">Do You Have an Account ..</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="required">Required</string>
    <string name="validatePassword">Password must have at least one numeric character ,one uppercase character,one lowercase character,one special symbol among @#$% and Password length should be between 8 and 20.</string>
    <string name="validateEmail">Your Email must match userName@gmail.com</string>
    <string name="emailNameEmpty">Email must not be empty</string>
    <string name="passwordEmpty">Password must not be empty</string>
    <string name="userNameEmpty">Username must not be empty</string>
    <string name="success">Sign up Successfully</string>
    <string name="failed">Failed to try Data</string>
    <string name="news">News</string>
    <string name="title">Title</string>
    <string name="auther">auther</string>
    <string name="desc">description</string>
    <string name="search">Search for article...</string>
    <string name="sign_in">Sign In</string>
    <string name="favourite_title">My Favourite List</string>
    <string name="no_internet">No Internet</string>
    <string name="name">Name :</string>
    <string name="logout">Logout</string>
    <string name="sure_to_log_out">Are you sure to logout?</string>
    <string name="logoutFailed">Logout does not completed</string>
    <string name="profile">Profile</string>
    <string name="image">image</string>
</resources>