<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".SignUpFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/navy"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintBottom_toTopOf="@id/registeration_card"
        app:layout_constraintEnd_toEndOf="@id/registeration_card"
        app:layout_constraintStart_toStartOf="@id/registeration_card"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/registeration_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_48sdp"
        android:elevation="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_24sdp"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/have_ann_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/actor"
                android:text="@string/do_you_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/actor"
                android:text="@string/sign_up"
                android:textColor="@color/navy"
                android:textSize="@dimen/_16ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@id/have_ann_account"
                app:layout_constraintTop_toBottomOf="@id/have_ann_account"
                app:layout_constraintTop_toTopOf="@id/have_ann_account" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/email"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/have_ann_account"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/navy">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_ediText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:hint="@string/password"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/navy"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/navy">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:backgroundTint="@color/navy"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>