<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fav_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:elevation="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">


       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/image"
           android:layout_width="100dp"
           android:layout_height="100dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:src="@drawable/article"
           app:civ_border_width="@dimen/_1sdp"/>

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="160dp"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/image"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="@color/black"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_10sdp" />



        <TextView
            android:id="@+id/publishedAt_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title"
            android:textSize="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp" />



        <TextView
            android:id="@+id/auther_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_textview"
            app:layout_constraintStart_toEndOf="@id/image"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="#EDAE51"
            android:text="@string/auther"
            android:textStyle="bold|italic"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp" />

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/auther_textview"
            app:layout_constraintStart_toStartOf="@id/title_textview"
            android:textColor="@color/black"
            android:text="@string/desc"
            android:textSize="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:inputType="textMultiLine"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>