<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.presentation.ui.SecondProfileFragment">



    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_400sdp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_30sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_white">

            <ImageView
                android:id="@+id/wave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:scaleType="fitXY"
                android:src="@drawable/wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/wave2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:scaleType="fitXY"
                android:src="@drawable/wave3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_48sdp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wave" />


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_48sdp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />


            <TextView
                android:id="@+id/texView_userEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/email"
                app:layout_constraintTop_toTopOf="@id/email"
                app:layout_constraintBottom_toBottomOf="@id/email"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/textView_userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintTop_toTopOf="@id/name"
                app:layout_constraintBottom_toBottomOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:backgroundTint="@color/navy"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texView_userEmail" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>